--- a/OpenCodeEdit/interface/Preferences.xib
+++ b/OpenCodeEdit/interface/Preferences.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6245"/>
     </dependencies>
@@ -15,7 +15,7 @@
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="163" y="199" width="245" height="120"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1028"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1920" height="1178"/>
             <view key="contentView" id="QbJ-pH-3BI">
                 <rect key="frame" x="0.0" y="0.0" width="245" height="120"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -43,7 +43,7 @@
                                                 <font key="font" metaFont="menu"/>
                                                 <menu key="menu" id="rCg-ra-lPh"/>
                                                 <connections>
-                                                    <binding destination="s6X-YP-5tg" name="selectedValue" keyPath="values.style" id="gHj-H4-vTw"/>
+                                                    <binding destination="s6X-YP-5tg" name="selectedValue" keyPath="values.theme" id="Lfx-bJ-O9s"/>
                                                 </connections>
                                             </popUpButtonCell>
                                         </popUpButton>
