--- a/OpenCodeEdit/interface/Preferences.xib
+++ b/OpenCodeEdit/interface/Preferences.xib
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6245"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PreferencesController">
             <connections>
-                <outlet property="stylePopUp" destination="d0e-iL-ekE" id="NaE-zK-rtA"/>
+                <outlet property="fontPopUp" destination="TlV-k2-CXW" id="AR9-3i-TN1"/>
                 <outlet property="styleSetPopUp" destination="oV8-fc-HlA" id="djF-0J-KZP"/>
                 <outlet property="styleTable" destination="BTF-fA-Qvv" id="Mqs-5h-p1Z"/>
+                <outlet property="themePopUp" destination="d0e-iL-ekE" id="maH-hk-2Pd"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -80,6 +82,9 @@
                                         <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Jh-ye-l1I">
                                             <rect key="frame" x="371" y="-75" width="152" height="23"/>
                                             <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <binding destination="-2" name="value" keyPath="self.foregroundColor" id="vJr-Rx-fvY"/>
+                                            </connections>
                                         </colorWell>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HsN-Fy-k1e">
                                             <rect key="frame" x="248" y="-149" width="80" height="17"/>
@@ -92,20 +97,20 @@
                                         <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="stf-RY-0FU">
                                             <rect key="frame" x="371" y="-114" width="152" height="23"/>
                                             <color key="color" red="0.05813049898" green="0.055541899059999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <binding destination="-2" name="value" keyPath="self.backgroundColor" id="McB-Px-S9r"/>
+                                            </connections>
                                         </colorWell>
                                         <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="er5-yv-EeW">
                                             <rect key="frame" x="332" y="-154" width="194" height="26"/>
                                             <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="TlV-k2-CXW">
                                                 <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                                 <font key="font" metaFont="menu"/>
-                                                <menu key="menu" id="Ham-u5-TBE">
-                                                    <items>
-                                                        <menuItem title="Menlo" id="R8T-8u-OuE"/>
-                                                        <menuItem title="Courier" id="MjZ-kq-i42"/>
-                                                        <menuItem title="Courier New" id="pSe-7u-HcQ"/>
-                                                    </items>
-                                                </menu>
+                                                <menu key="menu" id="Ham-u5-TBE"/>
                                             </popUpButtonCell>
+                                            <connections>
+                                                <binding destination="-2" name="selectedValue" keyPath="self.fontName" id="HrG-Hh-bhn"/>
+                                            </connections>
                                         </popUpButton>
                                         <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PUb-E8-qMw">
                                             <rect key="frame" x="320" y="-194" width="45" height="22"/>
@@ -115,10 +120,20 @@
                                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
+                                            <connections>
+                                                <binding destination="-2" name="value" keyPath="self.fontSize" id="ZA2-Uw-nYz">
+                                                    <dictionary key="options">
+                                                        <bool key="NSContinuouslyUpdatesValue" value="YES"/>
+                                                    </dictionary>
+                                                </binding>
+                                            </connections>
                                         </textField>
                                         <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EUV-ED-3lU">
                                             <rect key="frame" x="370" y="-196" width="19" height="27"/>
                                             <stepperCell key="cell" continuous="YES" alignment="left" maxValue="100" id="c02-2z-N7e"/>
+                                            <connections>
+                                                <binding destination="-2" name="value" keyPath="self.fontSize" id="h8M-9w-cRz"/>
+                                            </connections>
                                         </stepper>
                                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PDP-jr-p1E">
                                             <rect key="frame" x="248" y="-111" width="120" height="17"/>
@@ -136,16 +151,15 @@
                                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                             </textFieldCell>
                                         </textField>
-                                        <scrollView fixedFrame="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAY-rR-X8h">
+                                        <scrollView fixedFrame="YES" placeholderIntrinsicWidth="218" placeholderIntrinsicHeight="178" borderType="none" autohidesScrollers="YES" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oAY-rR-X8h">
                                             <rect key="frame" x="17" y="-230" width="218" height="178"/>
-                                            <clipView key="contentView" ambiguous="YES" misplaced="YES" drawsBackground="NO" id="UQX-IJ-rzK">
+                                            <clipView key="contentView" drawsBackground="NO" id="UQX-IJ-rzK">
                                                 <rect key="frame" x="1" y="0.0" width="238" height="134"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" id="BTF-fA-Qvv">
-                                                        <rect key="frame" x="0.0" y="0.0" width="217" height="19"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="214" height="17"/>
                                                         <autoresizingMask key="autoresizingMask"/>
-                                                        <size key="intercellSpacing" width="3" height="2"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                         <tableColumns>
@@ -186,6 +200,9 @@
                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                 <font key="font" metaFont="system"/>
                                             </buttonCell>
+                                            <connections>
+                                                <binding destination="-2" name="value" keyPath="self.bold" id="OCr-vF-egV"/>
+                                            </connections>
                                         </button>
                                         <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fMo-Ie-PTU">
                                             <rect key="frame" x="444" y="-232" width="81" height="18"/>
@@ -193,6 +210,9 @@
                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                 <font key="font" metaFont="system"/>
                                             </buttonCell>
+                                            <connections>
+                                                <binding destination="-2" name="value" keyPath="underline" id="abM-pA-DIy"/>
+                                            </connections>
                                         </button>
                                         <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nQ6-Yo-gLb">
                                             <rect key="frame" x="354" y="-232" width="61" height="18"/>
@@ -200,6 +220,9 @@
                                                 <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                 <font key="font" metaFont="system"/>
                                             </buttonCell>
+                                            <connections>
+                                                <binding destination="-2" name="value" keyPath="self.italic" id="g2t-iQ-Bff"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                 </view>
@@ -250,6 +273,5 @@
             <point key="canvasLocation" x="159" y="172.5"/>
         </window>
         <userDefaultsController representsSharedInstance="YES" id="s6X-YP-5tg"/>
-        <customObject id="4a0-tr-zdt" customClass="NSFontManager"/>
     </objects>
 </document>
